# MapReduce

./: Cargo.toml  cargo.toml
common/: Cargo.toml
common/src/: config_structs.rs  json_rpc.rs  lib.rs  node.rs  rpc.rs  threadpool.rs
config/: master_config.toml
master/: Cargo.toml
master/src/: lib.rs  main.rs  map.rs  map_job.rs  map_task.rs  master.rs  node_status.rs
slave/: Cargo.toml
slave/src/: lib.rs  main.rs  slave.rs
src/: Threadpool.rs  lib.rs  main.rs  master.rs  node.rs  threadpool.rs
